# Driver-Drowsiness-Detection-System

./: .env  .env.example  .gitignore  Approach.md  HOWTO.md  README.md  TESTING.md  TEST_RESULTS.md  USER_GUIDE.md  WANDB_SETUP.md  category.md  check_training.sh  docker-compose.yml  monitor.sh  monitor_training.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_frontend.py  train_model.py  validate_setup.py
backend/: Dockerfile  requirements.txt  worker.py  worker_inference.py
backend/models/: video_processing.py
backend/wandb/: latest-run
backend/wandb/run-20251202_230159-ysvrnm7q/: run-ysvrnm7q.wandb
backend/wandb/run-20251202_230307-3djvq5ak/: run-3djvq5ak.wandb
backend/wandb/run-20251202_230435-duos2izb/: run-duos2izb.wandb
backend/wandb/run-20251202_230522-xwhizwdx/: run-xwhizwdx.wandb
docker/: Dockerfile.alarm  Dockerfile.alarm_manager  Dockerfile.backend  Dockerfile.frontend  Dockerfile.inference_worker  Dockerfile.worker
frontend/: Dockerfile  app.py  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_inference_demo.ipynb  04_wandb_reporting.ipynb
src/: __init__.py
src/alarm_manager/: __init__.py  manager.py
src/backend/: main.py  models.py  schemas.py
src/config/: redis_client.py  redis_utils.py  settings.py  wandb_utils.py
src/frontend/: app.py
src/inference_worker/: worker.py
src/models/: __init__.py  cnn_model.py
wandb/: latest-run
wandb/run-20251202_152826-i15q4660/files/: requirements.txt  wandb-metadata.json
wandb/run-20251202_153435-pl0falso/: run-pl0falso.wandb
(+22 files in other folders)
