[project]
name = "driver-drowsiness-detection"
version = "0.1.0"
description = "Driver Drowsiness Detection System with FastAPI, Streamlit, Redis Streams, and W&B"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "redis>=5.0.0",
    "streamlit>=1.28.0",
    "streamlit-webrtc>=0.44.0",
    "av>=10.0.0",
    "numpy>=1.24.0",
    "wandb>=0.15.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

